Layout i.O., Baustellenbild hinzugefügt es fehlen Bilder der Schulhäuser

--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
   <header>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Titel der Webseite</title>
+    <title>Schulen Dornach</title>
   </header>
   <body>
+    <header>
+      <h1>Schulen Dornach</h1>
+    </header>
+    <div>
+      <img src="img/Baustelle.png" height="100px" alt="Baustelle" /><br />
+      <h3>Auf dieser Seite entsteht die neue Internetpräsenz der Schulen Dornach</h3><br />
+      <a href="http://www.dornach.ch/xml_1/Internet/de/application/d27/f349.cfm">Aktuell finden Sie hier weitere Informationen.</a>
+    </div>
+    <div id="address">
+      <h4>Schulen Dornach</h4>
+      Rektorat der Schulen Dornach<br />
+      Gempenring 34<br />
+      4143 Dornach<br />
+      Tel. 061 705 50 50<br />
+      Fax 061 705 50 52<br />
+      <a href="mailto:schulen.dornach@intergga.ch">schulen.dornach@intergga.ch</a>
+    </div>
+    <footer>
+        &copy; Schulen Dornach 2016
+    </footer>
   </body>
 </html>
